-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.8.0, Lustre 2.9.0
-
3
-
9223372036854775807
We just unleashed users on our new Lustre 2.8 DNE1 filesystem. Some users are migrating data from older Lustre 2.5 filesystems. I started seeing messages like these on an MDT:
Jan 25 12:56:45 zinc1 kernel: LustreError: 98053:0:(lod_object.c:1370:lod_verify_md_striping()) lsh-MDT0000-mdtlov: invalid lmv_user_md: magic = cd20cd0, stripe_offset = 4, stripe_count = 1: rc = -22 Jan 25 12:56:45 zinc1 kernel: LustreError: 98053:0:(lod_object.c:1370:lod_verify_md_striping()) Skipped 6 previous similar messages
I haven't yet tracked down what client-side process is producing these. I notice the magic value reported in the message (0x0CD20CD0) is LMV_MAGIC_V1 and that message is produced when the lum->lum_magic != LMV_USER_MAGIC (0x0CD30CD0). My hunch is that this is related to users copying files that have their striping layouts stored in v1 format from the older 2.5 filesystems. However I haven't been able to reproduce it that way myself.